# Ascetic

./: ArgumentParser.cu  ArgumentParser.cuh  CMakeLists.txt  CalculateOpt.cu  CalculateOpt.cuh  GraphMeta.cu  GraphMeta.cuh  README.md  TimeRecord.cu  TimeRecord.cuh  bfs-sync.hpp  bfs.cu  bfs.cuh  cc.cu  cc.cuh  common.cu  common.cuh  constants.cuh  globals.cuh  gpu_kernels.cu  gpu_kernels.cuh  main.cu  range.hpp  sssp.cu  sssp.cuh  tools.hpp
converter/: converter.cpp  globals.hpp
